refactor: simplify, create and delete integration tests
